# sxtnt

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/examples/: nova-fold.rs
crates/core/src/: accumulator.rs  commitment.rs  fold.rs  halo2_compat.rs  lib.rs  r1cs.rs  scheme.rs
crates/onchain/: Cargo.toml
crates/onchain/src/: lib.rs  program.rs  types.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: challenge.rs  lib.rs  transcript.rs
docs/: architecture.md  folding-schemes.md  threat-model.md
examples/: verify-onchain.ts
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: circuit.ts  client.ts  index.ts  types.ts
