[package]
name = "sxtnt-onchain"
description = "Solana on-chain verifier interface (Anchor + native solana-program). Provides the ProofRegistry account layout the public sxtnt-zk/sxtnt repo describes."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[features]
default = []

[dependencies]
solana-program = "1.18"
anchor-lang = "0.31"
sxtnt-core = { path = "../core" }
blake3 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }

[lib]
name = "sxtnt_onchain"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]
